apps/clubs/patchets/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commandes
spec:
  ports:
    - name: commandes
      port: 3000
      targetPort: http
  selector:
    app: commandes
