apps/clubs/patchets/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: commandes-allow-all
spec:
  podSelector:
    matchLabels:
      app: commandes
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgresql-allow-all
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: cnpg
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
